Fix scrollbar size

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,70 +13,72 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-html {
-  scroll-behavior: smooth;
-}
-body {
-  min-height: 100vh;
-  font-family: "Kumbh Sans", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-}
+@layer base {
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  html {
+    scroll-behavior: smooth;
+  }
+  body {
+    min-height: 100vh;
+    font-family: "Kumbh Sans", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+  }
 
-button {
-  background: none;
-  color: inherit;
-  border: none;
-  font: inherit;
-  cursor: pointer;
-  outline: inherit;
-  padding: 8px 16px;
-  border-radius: 8px;
-  color: white;
-  font-weight: 600;
-  font-size: 13px;
-}
-a {
-  background: none;
-  color: inherit;
-  border: none;
-  padding: 0;
-  font: inherit;
-  cursor: pointer;
-  outline: inherit;
-  text-decoration: none;
-  height: "100%";
-  width: "100%";
-}
-input {
-  all: unset;
-}
+  button {
+    background: none;
+    color: inherit;
+    border: none;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    padding: 8px 16px;
+    border-radius: 8px;
+    color: white;
+    font-weight: 600;
+    font-size: 13px;
+  }
+  a {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    text-decoration: none;
+    height: "100%";
+    width: "100%";
+  }
+  input {
+    all: unset;
+  }
 
-.e-current-day {
-  color: #008cd5 !important;
-}
+  .e-current-day {
+    color: #008cd5 !important;
+  }
 
-::-webkit-scrollbar {
-  width: 4px;
-  height: 2px;
-}
+  ::-webkit-scrollbar {
+    width: 4px;
+    height: 2px;
+  }
 
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
 
-::-webkit-scrollbar-thumb {
-  background: rgb(170, 170, 170, 0.4);
-  border-radius: 5px;
-}
+  ::-webkit-scrollbar-thumb {
+    background: rgb(170, 170, 170, 0.4);
+    border-radius: 5px;
+  }
 
-::-webkit-scrollbar-thumb:hover {
-  background: #888;
+  ::-webkit-scrollbar-thumb:hover {
+    background: #888;
+  }
 }
 
 @layer utilities {
@@ -88,5 +90,30 @@ input {
   .no-scrollbar {
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
+  }
+
+  .default-scrollbar {
+    /* Reset to default webkit scrollbar */
+    ::-webkit-scrollbar {
+      width: 8px;
+      height: 8px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: initial;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: #888;
+      border-radius: 0;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: #555;
+    }
+
+    /* Reset Firefox scrollbar */
+    scrollbar-width: auto;
+    scrollbar-color: #888 #f1f1f1;
   }
 }
